Start building the post loader.

--- a/static/home.html
+++ b/static/home.html
@@ -29,7 +29,7 @@
 
     <div class="row">
 
-        <div class="col-sm-8 blog-main">
+        <div id="blog-list" class="col-sm-8 blog-main">
 
             <div class="blog-post">
                 <h2 class="blog-post-title">Sample blog post</h2>
@@ -111,10 +111,10 @@
                 <p>Donec ullamcorper nulla non metus auctor fringilla. Nulla vitae elit libero, a pharetra augue.</p>
             </div><!-- /.blog-post -->
 
-            <nav class="blog-pagination">
+            <!--nav class="blog-pagination">
                 <a class="btn btn-outline-primary" href="#">Older</a>
                 <a class="btn btn-outline-secondary disabled" href="#">Newer</a>
-            </nav>
+            </nav-->
 
         </div><!-- /.blog-main -->
 
@@ -125,7 +125,7 @@
                     <a href="https://serverless.com/">Serverless</a> enthusiast by night.  Interests include scuba, biochemistry, and the stinkiest of cheeses.</p>
             </div>
             <div class="sidebar-module">
-                <h4>Elsewhere</h4>
+                <h4>In The Wild</h4>
                 <ol class="list-unstyled">
                     <li><a href="https://www.github.com/anonmos">GitHub</a></li>
                     <li><a href="https://twitter.com/realTimGrowney">Twitter</a></li>
