Add deployment script and update to use assets.timgrowney.com

--- a/static/home.html
+++ b/static/home.html
@@ -19,7 +19,7 @@
 <body>
 <div class="blog-header">
     <div class="container">
-        <img class="headshot" src="img/tim-headshot-web.jpg">
+        <img class="headshot" src="https://assets.timgrowney.com/images/tim-headshot-web.jpg">
         <h1 class="blog-title">Tim Talks Technical</h1>
         <p class="lead blog-description">Exploring wetware, software, and everywhere in-between.</p>
     </div>
