Update blog page to load actual blog content.

--- a/static/post.html
+++ b/static/post.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Loading Post!</title>
 </head>
 <body>
-
+<div id="post-container">
+    Loading content ...
+</div>
 </body>
 </html>
