Working sample blog post.

--- a/static/post.html
+++ b/static/post.html
@@ -3,10 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <title>Loading Post!</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="css/blog.css" rel="stylesheet">
 </head>
 <body>
-<div id="post-container">
-    Loading content ...
+
+<div class="blog-header">
+    <div class="container">
+        <img class="headshot" src="https://assets.timgrowney.com/images/tim-headshot-web.jpg">
+        <h1 class="blog-title">Tim Talks Technical</h1>
+        <p class="lead blog-description">Exploring wetware, software, and everywhere in-between.</p>
+    </div>
 </div>
+
+<div class="container">
+    <div class="row">
+        <div id="post-container" class="col-sm-8 blog-main">
+            Loading content ...
+        </div>
+    </div>
+</div>
+
+<footer class="blog-footer">
+    <p>
+        <a href="#">Back to top</a>
+    </p>
+</footer>
+
 </body>
+<script src="js/bundle.js"></script>
+<script src="js/bootstrap.min.js"></script>
 </html>
