--- a/static/post.html
+++ b/static/post.html
@@ -21,8 +21,8 @@
 </div>
 
 <div class="container">
-    <div class="row">
-        <div id="post-container" class="col-sm-8 blog-main">
+    <div class="row justify-content-center">
+        <div id="post-container" class="col-lg-9">
             Loading content ...
         </div>
     </div>
