Fix weird text.

--- a/static/home.html
+++ b/static/home.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Technical Talks with Tim">
+    <meta name="description" content="Tim's Blog">
     <meta name="author" content="Tim Growney">
-    <link rel="icon" href="../../../../favicon.ico">
+    <!--link rel="icon" href="../../../../favicon.ico"-->
 
-    <title>Technical Tim</title>
+    <title>Tim's Blog</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -20,8 +20,8 @@
 <div class="blog-header">
     <div class="container">
         <img class="headshot" src="https://assets.timgrowney.com/images/tim-headshot-web.jpg">
-        <h1 class="blog-title">Tim Talks Technical</h1>
-        <p class="lead blog-description">Exploring wetware, software, and everywhere in-between.</p>
+        <h1 class="blog-title">Tim's Blog</h1>
+        <p class="lead blog-description">Exploring hardware, software, and everywhere in-between.</p>
     </div>
 </div>
 
@@ -37,7 +37,7 @@
             <div class="sidebar-module sidebar-module-inset">
                 <h4>About</h4>
                 <p>Tim Growney is a Software Engineering Manager at <a href="https://teespring.com">Teespring</a> by day,
-                    <a href="https://serverless.com/">Serverless</a> enthusiast by night.  Interests include scuba, biochemistry, and the stinkiest of cheeses.</p>
+                    <a href="https://serverless.com/">Serverless</a> enthusiast by night.  Interests include scuba, biochemistry, and toying with Raspberry Pis.</p>
             </div>
             <div class="sidebar-module">
                 <h4>In The Wild</h4>
