--- a/static/post.html
+++ b/static/post.html
@@ -15,8 +15,8 @@
 <div class="blog-header">
     <div class="container">
         <img class="headshot" src="https://assets.timgrowney.com/images/tim-headshot-web.jpg">
-        <h1 class="blog-title">Tim Talks Technical</h1>
-        <p class="lead blog-description">Exploring wetware, software, and everywhere in-between.</p>
+        <h1 class="blog-title">Tim's Blog</h1>
+        <p class="lead blog-description">Exploring hardware, software, and everywhere in-between.</p>
     </div>
 </div>
 
