--- a/static/home.html
+++ b/static/home.html
@@ -14,6 +14,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/blog.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -59,5 +60,26 @@
     </p>
 </footer>
 <script src="js/bundle.js"></script>
+<script>
+  if (window.location.host === 'www.timgrowney.com') {
+    (function (i, s, o, g, r, a, m) {
+      i['GoogleAnalyticsObject'] = r;
+      i[r] = i[r] || function () {
+        (i[r].q = i[r].q || []).push(arguments)
+      }, i[r].l = 1 * new Date();
+      a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0];
+      a.async = 1;
+      a.src = g;
+      m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+    ga('create', 'UA-104689004-1', 'auto');
+    ga('send', 'pageview');
+  } else {
+    console.log(`Skipping GA setup, because not production.`)
+  }
+
+</script>
 </body>
 </html>
