Fix a Disqus bug.

--- a/static/post.html
+++ b/static/post.html
@@ -36,7 +36,7 @@
        *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
        *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
 
-      var page_url = window.location.hostname + window.location.pathname;
+      var page_url = window.location.protocol + "//" + window.location.hostname + window.location.pathname;
       var post_id = window.location.href.split('?')[1].split('=');
       var post_with_page = "";
       var final_identifier = "";
