--- a/static/home.html
+++ b/static/home.html
@@ -37,7 +37,7 @@
         <div class="col-sm-3 offset-sm-1 blog-sidebar">
             <div class="sidebar-module sidebar-module-inset">
                 <h4>About</h4>
-                <p>Tim Growney is a Software Engineering Manager at <a href="https://teespring.com">Teespring</a> by day,
+                <p>Tim Growney is a CTO at <a href="https://www.medinas.co">Medinas</a> by day,
                     <a href="https://serverless.com/">Serverless</a> enthusiast by night.  Interests include scuba, biochemistry, and toying with Raspberry Pis.</p>
             </div>
             <div class="sidebar-module">
